# cdk

./: Cargo.toml
crates/cashu-mint-nip74/: Cargo.toml
crates/cashu-mint-nip74/src/: lib.rs
crates/cdk/: Cargo.toml
crates/cdk-cli/src/sub_commands/: mint_info.rs
crates/cdk-common/src/: error.rs
crates/cdk-ffi/src/: multi_mint_wallet.rs
crates/cdk-sql-common/src/wallet/: mod.rs
crates/cdk-sqlite/: Cargo.toml
crates/cdk/src/wallet/: builder.rs  melt.rs  mint.rs  mod.rs  multi_mint_wallet.rs  send.rs
crates/cdk/src/wallet/auth/: auth_wallet.rs
crates/cdk/src/wallet/issue/: issue_bolt11.rs
crates/cdk/src/wallet/melt/: melt_bolt11.rs
crates/cdk/src/wallet/mint_connector/: http_client.rs  http_client_tor.rs  mod.rs
crates/cdk/src/wallet/mint_connector/transport/: tor_transport.rs
meetings/: 2025-11-12-agenda.md
